New in 0.6.14.cvs1 since 0.6.14 (2007-05-10):

  * Bug fixes:


New in 0.6.14 since 0.6.13 (2005-12-27):

  * Bug fixes: #1716196

  * Other fixes and improvements which include API/ABI additions.


New in 0.6.13 since 0.6.12 (2005-03-13):

  * Bug fixes: #803191, #1051994, #1054321, #1054323, #1196787
  
  * For pkg-config users, force usage of #include <libexif/exif-*.h>
    (disable #include <exif-.h>)

  * Updated German translation

  * Build system tuning

  * Misc changes:
    Fix COPYRIGHT tag, fix memory corruption, use qsort.


New in 0.6.12 (2005-03-13) since 0.6.11 (2004-10-16):

  * Final fix of Ubuntu Security Notice USN-91-1 (CAN-2005-0664)
    https://bugzilla.ubuntulinux.org/show_bug.cgi?id=7152

  * Updated build system with cross compile capabilities

  * Small fixes:
    Fix tag order, use even offsets, improve Nikon&Olympus mnote tags.


New in 0.6.11 (2004-10-16) since 0.6.10 (2004-08-27):

  * Improved tag names, titles, and descriptions.

  * Bug fixes for memory leaks, format strings, month one off, ...

  * Support for Watcom compiler (requires manual copying of files)


New in 0.6.10 (2004-08-27) since 0.5.9 (2002-12-11):

  * New tags suppored, and added a few more checks.

  * API changes

  * libmnote has been merged back into libexif


General remarks:

  * This file contains changes visible to users.

  * Small bug fixes (typos, memory leaks, ...) and feature
    enhancements (new tag types, ...) are not mentionened
    explicitly.

  * Apart from that, I would like to ask committers to update this
    file when they commit "big" user visible changes.

  * If someone wants to reconstruct past changes and log them here,
    you're welcome to.